# tf2-demo-player

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  icons.toml  package_win.sh
data/: demoplayer.gresource.xml
src/: analyser.rs  demo_manager.rs  inspector.rs  main.rs  rcon_manager.rs  recorder.rs  settings.rs  ui.rs  util.rs
src/ui/: about.rs  about_window.rs  controls.rs  demo_infobox.rs  demo_list.rs  demo_object.rs  detail_view.rs  event_dialog.rs  event_list.rs  event_object.rs  info_pane.rs  inspection_window.rs  main_window.rs  mod.rs  settings_window.rs  ui_util.rs  util.rs  window.rs
src/ui/inspection_window/: event_list.rs  mod.rs
src/ui/main_window/: controls.rs  demo_infobox.rs  demo_list.rs  demo_object.rs  event_dialog.rs  event_list.rs  event_object.rs  info_pane.rs  mod.rs
src/ui/resources/: demo_inspection.ui  event_dialog.ui  resources.gresource.xml  settings_window.ui  window.ui
