[package]
name = "tf2-demo-player"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tf-demo-parser = { git = "https://github.com/demostf/parser.git", tag = "v0.5.0"}
bitbuffer = { version = "0.10.9", features = ["serde"] }
glob = "0.3.1"
humantime = "2.1.0"
rcon = { version = "0.6.0", features = ["rt-async-std"] }
log = "0.4.20"
env_logger = "0.11.2"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
opener = { version = "0.6.1", features = ["reveal"] }
chrono = "0.4.34"
size_format = "1.0.2"
trash = "4.0.0"
async-std = "1.12.0"
gtk-macros = "0.3.0"

[build-dependencies]
glib-build-tools = "0.19.0"
