[package]
name = "tf2-demo-player"
version = "0.1.0"
edition = "2021"

[dependencies]
tf-demo-parser = "0.5.1"
bitbuffer = { version = "0.10.9", features = ["serde"] }
glob = "0.3.1"
humantime = "2.1.0"
rcon = { version = "0.6.0", features = ["rt-async-std"] }
log = "0.4.20"
env_logger = "0.11.2"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
opener = { version = "0.6.1", features = ["reveal"] }
chrono = "0.4.34"
size_format = "1.0.2"
trash = "4.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
rand = "0.8.5"
relm4 = { version = "0.9.1", features = ["gnome_45", "libadwaita"] }
relm4-components = { version = "0.9.1", features = ["libadwaita"] }